changed the entire stylesheet

--- a/index.html
+++ b/index.html
@@ -2,95 +2,127 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png" />
-  <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet" />
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@400;500;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="style.css" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- displays site properly based on user's device -->
+
+  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
 
   <title>Frontend Mentor | [Challenge Name Here]</title>
+  <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@400;500;700&display=swap" rel="stylesheet">
+  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
+  <link rel="stylesheet" href="style.css">
+  <style>
+    .attribution {
+      font-size: 11px;
+      text-align: center;
+    }
+
+    .attribution a {
+      color: hsl(228, 45%, 44%);
+    }
+  </style>
 </head>
 
 <body>
-  <div class="nice-background"></div>
-  <div class="nice-background nice-background-2"></div>
-  <div class="container">
-    <div class="phone">
-      <div class="header">
-        <div class="white-square">a</div>
-        <div class="arrow-icon"><i class="ri-arrow-left-s-line"></i></div>
-        <div class="user-box">
-          <div class="avatar">
-            <img src="images/avatar.jpg" alt="Samuel Green" />
+
+  <section>
+    <div id="content">
+      <!--Left Vi<div class="clearfix"></div>olet-->
+      <aside>
+        <div class="rec_radL"></div>
+        <div class="circle"></div>
+
+      </aside>
+      <div id="clearfix"></div>
+      <!--Start Phone-->
+      <div id="phone">
+        <div id="screen">
+          <div id="camFront"></div>
+          <div id="toWalk">
+            <p class="arrow">&#60;</p>
+            <div id="avatar">
+              <img src="images/avatar.jpg" alt="">
+            </div>
+            <h2>Samuel Green</h2>
+            <p>Available to Walk</p>
+            <p class="deg">...</p>
           </div>
-          <p>Samuel Green <span>Available to Walk</span></p>
-        </div>
-        <div class="dots">
-          <div class="dot"></div>
-          <div class="dot"></div>
-          <div class="dot"></div>
+          <div class="chat1" id="msj1">
+            <p>
+              That sounds great. I’d be happy with that.
+            </p>
+          </div>
+          <div class="chat1" id="msj2">
+            <p>
+              Could you send over some pictures of your dog, please?
+
+          </div>
+          <div id="dog">
+            <img src="images/dog-image-1.jpg" alt="">
+            <img src="images/dog-image-2.jpg" alt="">
+            <img src="images/dog-image-3.jpg" alt="">
+          </div>
+          <div class="chat2" id="msj3">
+            <p> Here are a few pictures. She’s a happy girl!
+            </p>
+          </div>
+          <div class="chat2 p2" id="msj4">
+            <p>
+              Can you make it?
+            </p>
+          </div>
+          <div class="chat1 p3" id="msj5">
+            <p>
+              She looks so happy! The time we discussed works. How long shall I take her out for?
+            </p>
+          </div>
+          <div class="walk msj6">
+            <div class="circleText"></div>
+            <p>
+              30 minute walk
+            <p class="price">$29</p>
+            </p>
+          </div>
+          <div class="walk msj6">
+            <div class="circleText"></div>
+            <p>
+              1 hour walk
+            <p class="price"> $49</p>
+            </p>
+          </div>
+          <div id="type">
+            <p>
+              Type a message…
+            <div id="arrowBlack">
+              <p>&#62;</p>
+            </div>
+            </p>
+          </div>
         </div>
       </div>
-      <div class="phone-body">
-        <p class="left">That sounds great. I’d be happy to discuss more.</p>
-        <p class="left">
-          Could you send over some pictures of your dog, please?
+      <!--End Phone-->
+      <!--Text center-->
+      <div id="center">
+        <h1>
+          Simple booking
+        </h1>
+        <p> Stay in touch with our dog walkers through the chat interface. This makes it easy to
+          discuss arrangements and make bookings. Once the walk has been completed you can rate
+          your walker and book again all through the chat.
         </p>
-        <div class="right box-images">
-          <div class="box">
-            <img src="images/dog-image-1.jpg" alt="Dog image 1" />
-          </div>
-          <div class="box">
-            <img src="images/dog-image-2.jpg" alt="Dog image 2" />
-          </div>
-          <div class="box">
-            <img src="images/dog-image-3.jpg" alt="Dog image 3" />
-          </div>
-        </div>
-        <p class="right">Here are a few pictures. She’s a happy girl!</p>
-        <p class="right">Can you make it?</p>
-        <p class="left">
-          She looks so happy! The time we discussed works. How long shall I
-          take her out for?
-        </p>
-        <div class="left option">
-          <div class="round"></div>
-          <div class="option-text">30 minute walk</div>
-          <div class="price">$29</div>
-        </div>
-
-        <div class="left option">
-          <div class="round"></div>
-          <div class="option-text">1 hour walk</div>
-          <div class="price">$49</div>
-        </div>
-        <div class="left text-placeholder">
-          <p>Type a message…</p>
-          <div class="arrow-icon-right">
-            <i class="ri-arrow-right-s-line"></i>
-          </div>
-        </div>
       </div>
+      <div id="clearfix"></div>
+      <div id="clearfix"></div>
+      <!--Right Violet-->
+      <aside>
+        <div class="rec_radR"></div>
+      </aside>
+      <!--Right Violet-->
     </div>
-    <div class="text-part">
-      <h1>Simple booking</h1>
-      <p class="description">
-        Stay in touch with our dog walkers through the chat interface. This
-        makes it easy to discuss arrangements and make bookings. Once the walk
-        has been completed you can rate your walker and book again all through
-        the chat.
-      </p>
-    </div>
-  </div>
 
-  <div class="attribution">
-    Challenge by
-    <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. Coded by <a
-      href="https://github.com/pettik">Petr Bednarski</a>.
-  </div>
+  </section>
+
 </body>
 
 </html>
