--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
       <div class="space"></div>
       <div class="content">
         <div class="name">&lt;
-          <img src="./images/avatar.jpg" alt="">
+          <img src="images/avatar.jpg" alt="">
           <div>
-            <h1>Samuel Green</h1>
+            <h2>Samuel Green</h2>
             <p>Available to Walk</p>
           </div>
         </div>
